fixed responsive overflow issue on landing page

--- a/Module-2_Assessment/assets/css/style.css
+++ b/Module-2_Assessment/assets/css/style.css
@@ -4,14 +4,16 @@
 }
 
 body {
-  background: url("https://wallpaperplay.com/walls/full/b/0/6/64789.jpg")
-    no-repeat center center fixed;
+  background: url("/Module-2_Assessment/images/64789.jpg")
+    /* background: url("https://wallpaperplay.com/walls/full/b/0/6/64789.jpg") */
+    no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   overflow-x: hidden;
 }
+
 .btn {
   border-color: rgb(105, 60, 2);
 }
@@ -58,5 +60,5 @@ input {
 #gameContainer {
   display: block;
   visibility: hidden;
-  padding-top: 100px;
+  padding-top: 5%;
 }
